--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body>
     <div class="cards">
     <div class="card">
-            <img src="images/image-daniel.jpg" alt="" class="person_photo">
-            <p class="person_name">Daniel Clifford</p>
-            <p class="validate_status">Verified Graduate</p>
+        <img src="images/image-daniel.jpg" alt="" class="person_photo">
+        <p class="person_name">Daniel Clifford</p>
+        <p class="validate_status">Verified Graduate</p>
+        <img class="sign" src="images/bg-pattern-quotation.svg">
         <article>I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</article>
         <q>I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup.</q>
     </div>
